prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_array_return.nut
// EXPECTED: compile-time error - function returns array, declared as returning table
function make_array(): table {
    return [1, 2, 3]
}
return make_array
